# Object-tracking-following-ArduPilot

./: README.md
follow_tgt_opencv/: CMakeLists.txt  package.xml
follow_tgt_opencv/scripts/: follow_target.py
gz_launch_ros/: CMakeLists.txt  package.xml
gz_launch_ros/launch/: distance_sensor_gazebo.launch
gz_launch_ros/models/: model.sdf
gz_launch_ros/models/hokuyo/: model.sdf
gz_launch_ros/models/iris_with_ardupilot/: model.sdf
gz_launch_ros/models/iris_with_standoffs/: iris.gazebo  iris1.gazebo  iris_ros.urdf.xacro  iris_ros.urdf1.xacro
gz_launch_ros/worlds/: iris_arducopter_runway.world  iris_arducopter_runway3.world
rviz_launch/: CMakeLists.txt  package.xml
rviz_launch/launch/: iris_rviz.launch
